--- a/src/App.scss
+++ b/src/App.scss
@@ -279,6 +279,7 @@ table{
   border: 2px solid #61dafb;
   color: white;
   text-align: center;
+  margin-bottom: 65px;
   
 }
 
@@ -447,4 +448,81 @@ td{
   border: 2px solid #61dafb;
   color: white;
   text-align: center;
+}
+
+
+//GRAFIK
+.graphPage{
+  background-color: #000;
+  height: 100%;
+  min-height: 100vh;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  
+}
+.graphDugme{
+  width:120px;
+  height: 43px;
+  background-color: rgb(7, 107, 170);
+  border-radius: 12px;
+  border: 0;
+  box-sizing: border-box;
+  color: #eee;
+  cursor: pointer;
+  font-size: 18px;
+  margin: 10px;
+  // outline: 0;
+  text-align: center;
+}
+
+.trakaDugmad{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.horizontalnaTraka{
+  display: flex;
+  flex-direction: row;
+}
+
+#myChart{
+  height: 500px;
+  display: flex;
+  margin: 43px;
+  margin-top: 2px;
+  width: 65vw;
+  margin-right: 80px;
+}
+
+.formaGraph{
+  background-color: #15172b;
+  border-radius: 20px;
+  box-sizing: border-box;
+  padding: 20px;
+  margin-top: -20px;
+  height: 530px;
+  width: 320px;
+}
+
+.b1 {
+  background-color: rgb(7, 107, 170);
+  border-radius: 12px;
+  border: 0;
+  box-sizing: border-box;
+  color: #eee;
+  cursor: pointer;
+  font-size: 18px;
+  height: 43px;
+  margin-top: 20px;
+  margin-left: 6px;
+  margin-right: 6px;
+  // outline: 0;
+  text-align: center;
+  width: 80px;
+}
+
+.cut-short-graph {
+  width: 135px;
 }
