--- a/src/App.scss
+++ b/src/App.scss
@@ -502,8 +502,15 @@ td{
   box-sizing: border-box;
   padding: 20px;
   margin-top: -20px;
-  height: 530px;
+  height: fit-content;
   width: 320px;
+}
+
+.formaDugmad{
+  max-width: 310px;
+  max-height: 60px;
+  justify-content: center;
+  align-items: center;
 }
 
 .b1 {
@@ -515,12 +522,13 @@ td{
   cursor: pointer;
   font-size: 18px;
   height: 43px;
+  // outline: 0;
+  text-align: center;
+  width: 28%;
+  font-size: 16px;
   margin-top: 20px;
   margin-left: 6px;
   margin-right: 6px;
-  // outline: 0;
-  text-align: center;
-  width: 80px;
 }
 
 .cut-short-graph {
