--- a/src/App.scss
+++ b/src/App.scss
@@ -388,6 +388,20 @@ td{
 
 //API TABELA     -----------------------------------------------------------------------------
 
+@page {
+  margin-top: 50px;
+  margin-bottom: 43px;
+}
+@media print {
+  .tabelaOmotacPrint {
+    padding-bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+
 .wrapperTabelaApi {
   background-color: #000;
   display: flex;
@@ -500,7 +514,7 @@ td{
   display: flex;
   margin: 43px;
   margin-top: 2px;
-  width: 65vw;
+  width: 67vw;
   margin-right: 80px;
 }
 
