--- a/src/App.scss
+++ b/src/App.scss
@@ -145,7 +145,9 @@ code {
   padding: 4px 20px 0;
   width: 100%;
 }
-
+.input:focus{
+  background-color: #50536f;
+}
 .cut {
   background-color: #15172b;
   border-radius: 10px;
